--- a/src/Components/Shared/Header/NavigateBar.css
+++ b/src/Components/Shared/Header/NavigateBar.css
@@ -1,3 +1,9 @@
 .navigations {
     background-color: #131518f1;
 }
+.logoutbutton {
+    border: none;
+    text-decoration: none;
+    background-color: #1e1f22f1;
+    
+}
